--- a/stetper-cli/MyProject/stepperPage/style.scss
+++ b/stetper-cli/MyProject/stepperPage/style.scss
@@ -38,6 +38,7 @@
     .current-step-container {
       height: calc(100vh - 150px);
       overflow: overlay;
+      background-color: #fff;
     }
   }
 }
