--- a/stetper-cli/template/stepperPage/style.scss
+++ b/stetper-cli/template/stepperPage/style.scss
@@ -41,4 +41,10 @@
       background-color: #fff;
     }
   }
+
+  .main-form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 }
